--- a/style.css
+++ b/style.css
@@ -21,3 +21,57 @@ body {
     margin: 0;
     text-align: center;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 0.5em;
+}
+
+ul > li {
+    list-style: none;
+}
+
+.card,
+.reset-btn {
+    cursor: pointer;
+}
+
+.btn {
+    border-radius: 1em;
+    border: none;
+    color: #fff;
+    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    padding: 0.8em;
+}
+
+h1 {
+    font-size: 3em;
+    font-weight: 400;
+}
+
+h2 {
+    font-size: 2.5em;
+    font-weight: 600;
+}
+
+p {
+    font-size: 1.6em;
+}
+
+h3 {
+    font-weight: 400;
+}
+
+
+.score-panel {
+    font-size: 1.4em;
+    padding: 1em 0 2em;
+}
+
+.rating > li {
+    display: inline-block;
+    padding: 0.5em;
+}
