--- a/style.css
+++ b/style.css
@@ -75,3 +75,47 @@ h3 {
     display: inline-block;
     padding: 0.5em;
 }
+
+.moves-counter {
+    padding: 0.5em;
+}
+
+.reset-btn {
+    background: #000;
+}
+
+.timer-container {
+    background: #fff;
+    border-radius: 0.5em;
+    color: #000;
+    margin: 0.5em;
+    padding: 0.5em;
+}
+
+.timer {
+    font-size: 1em;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(46, 61, 73);
+    background-color: rgba(46, 61, 73, 0.6);
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    margin: 5% auto;
+    border: 0.8em solid #fc4;
+    padding-right: 2em;
+    width: 80%;
+}
