changed deck styling

--- a/style.css
+++ b/style.css
@@ -152,3 +152,28 @@ p.stats:last-child {
     background: #28e;
     margin-bottom: 1em;
 }
+
+.deck {
+    background: linear-gradient(to bottom, #b33838, #000000);
+    border-radius: 1.5em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 35em;
+    margin-bottom: 6em;
+    padding: 0.5em;
+    width: 35em;
+}
+
+.deck,
+.card {
+    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+}
+
+.card {
+    background: rgb(209, 29, 200);
+    border-radius: 0.5em;
+    height: 7em;
+    width: 7em;
+}
