added relatable background img

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background: url('imgs/ignasi_pattern_s.png');
+    background: url('imgs/pexels-dids-2508565.jpg');
     font-family: "Open Sans", sans-serif;
     font-size: 62.5%;
     letter-spacing: 1.5px;
