--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
-* {
+*{
     margin: 0;
-    padding: 0l;
+    padding: 0;
 }
 
 *,
@@ -71,7 +71,7 @@ h3 {
     padding: 1em 0 2em;
 }
 
-.rating>li {
+.star-rating>li {
     display: inline-block;
     padding: 0.5em;
 }
